[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/MemberOverview.gd" type="Script" id=1]
[ext_resource path="res://fonts/Handwriting.tres" type="DynamicFont" id=2]

[node name="MemberOverview" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -640.0
margin_bottom = -693.0
rect_min_size = Vector2( 720, 27 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 800.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label_Name" type="Label" parent="HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 203.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0.588235 )
text = "Elizabeth Thompson"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_Profession" type="Label" parent="HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 207.0
margin_right = 347.0
margin_bottom = 25.0
rect_min_size = Vector2( 140, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0.588235 )
text = "Doctor"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_Parents" type="Label" parent="HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 351.0
margin_right = 541.0
margin_bottom = 25.0
rect_min_size = Vector2( 190, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0.588235 )
text = "Newcomer"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_MaritalStatus" type="Label" parent="HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 545.0
margin_right = 765.0
margin_bottom = 25.0
rect_min_size = Vector2( 220, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0.588235 )
text = "Single"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_Children" type="Label" parent="HBoxContainer"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 766.0
margin_right = 1066.0
margin_bottom = 16.0
rect_min_size = Vector2( 320, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0.588235 )
text = "Davis, Potter, Stuff"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

